My personal website rough draft

--- a/index.html
+++ b/index.html
@@ -1,2 +1,47 @@
-<p>Hello World!</p>
-<p>I'mma be writing code here</p>
+<!doctype html>
+<index>
+<head>
+	<title>Quinton Trudell</title>
+	<link rel="stylesheet" href="./stylesheets/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Rock+Salt' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono' rel='stylesheet' type='text/css'>
+	<link rel="shortcut icon" href="/favicon.ico" >
+</head>
+<!--I don't make any art to show in a portfolio, so this website could be used as a resume. Therefore, it should be concise, easy to read, and completely on one page.-->
+<body>
+	<h1>Quinton Trudell</h1>
+	<p> "Fancy color schemes are for tools" - Ghandi
+	<p>
+		Get at me:
+	</p>
+<div style="text-align:center">
+	<a href="https://www.facebook.com/quin.trudell"><img src="images/Facebook_logo.png" hspace="10" width="50" height="50" class="withfadeout"></a>
+	<a href="http://www.linkedin.com/profile/view?id=301054212&trk=spm_pic"><img src="images/transparent-linkedin-logo-icon1.png" width="50" height="50" class="withfadeout"></a>
+	<a href="https://twitter.com/QuintonTrudell"><img src="images/twitter-icon-square.png" hspace="10" width="50" height="50" class="withfadeout"></a>
+	<a href="http://instagram.com"><img src="images/instagram_logo_2.jpg" width="50" height="50" class="withfadeout"></a>
+	<a href="https://plus.google.com"><img src="images/google-plus-logo.png" hspace="10" width="50" height="50" class="withfadeout"></a>
+</div>
+
+<div class="left">
+	<h4>Who I am<br>Click CsZar to see more of CsZar!</h4>
+	<a href="http://www.youtube.com/watch?v=QMU7KQqhsHs"><img src="images/quinton with dog.jpg" border="10px" hspace="50" width="350" height="525"></a>
+	<div class="aboutme">
+		<p>I'm a thinker who's<br>trying to become a doer.</p>
+	</div>
+</div>
+<div class="right">
+	<h4>Where I'm going<br>Click my tie to read my resume!</h4>
+	<a href="Quinton Trudell RESUME.pdf"><img src="images/quintont as dwight.jpg" border="10px" width="350" height="525"></a>
+	<div class="whatido">
+		<p>Desk jobs offer the<br>consistency that I prefer.
+	</div>
+</div>
+<div class="center">
+	<h4>What I do<br>Click my tie to see where I work!</h4>
+	<a href="http://www.djcrashers.com"><img src="images/quinton in suit.jpg" border="10px" width="350" height="525"></a>
+	<div class="whereimgoing">
+		<p>I basically dress up for a job.</p>
+	</div>
+</div>
+
+</body>
