Added Umich Icon

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <index>
+<html>
 <head>
 	<title>Quinton Trudell</title>
 	<link rel="stylesheet" href="./stylesheets/style.css">
@@ -8,8 +9,8 @@
 	<link rel="shortcut icon" href="/favicon.ico" >
 </head>
 <!--I don't make any art to show in a portfolio, so this website could be used as a resume. Therefore, it should be concise, easy to read, and completely on one page.-->
-<body>
 	<h1>Quinton Trudell</h1>
+<body>
 	<p> "Fancy color schemes are for tools" - Ghandi
 	<p>
 		Get at me:
@@ -45,3 +46,4 @@
 </div>
 
 </body>
+</html>
