Greyed out Pictures

--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
 
 <div class="left">
 	<h4>Who I am<br>Click CsZar to see more of CsZar!</h4>
-	<a href="http://www.youtube.com/watch?v=QMU7KQqhsHs"><img src="images/quinton with dog.jpg" border="10px" hspace="50" width="350" height="525"></a>
+	<a href="http://www.youtube.com/watch?v=QMU7KQqhsHs"><img src="images/quinton with dog.jpg" border="10px" hspace="50" width="350" height="525" class="greyedout"></a>
 	<div class="aboutme">
 		<p>I'm a thinker who's<br>trying to become a doer.</p>
 	</div>
 </div>
 <div class="right">
 	<h4>Where I'm going<br>Click my tie to read my resume!</h4>
-	<a href="Quinton Trudell RESUME.pdf"><img src="images/quintont as dwight.jpg" border="10px" width="350" height="525"></a>
+	<a href="Quinton Trudell RESUME.pdf"><img src="images/quintont as dwight.jpg" border="10px" width="350" height="525" class="greyedout"></a>
 	<div class="whatido">
 		<p>Desk jobs offer the<br>consistency that I prefer.
 	</div>
 </div>
 <div class="center">
 	<h4>What I do<br>Click my tie to see where I work!</h4>
-	<a href="http://www.djcrashers.com"><img src="images/quinton in suit.jpg" border="10px" width="350" height="525"></a>
+	<a href="http://www.djcrashers.com"><img src="images/quinton in suit.jpg" border="10px" width="350" height="525" class="greyedout"></a>
 	<div class="whereimgoing">
 		<p>I basically dress up for a job.</p>
 	</div>
